# mcp-vault

./: CLAUDE.md  LICENSE  README-QUERY.md  README.md  USAGE.md  pyproject.toml
src/mcp_vault/: __init__.py  implementation.py  server.py  tools.py
src/mcp_vault/tasks/: __init__.py  cli.py  date_resolver.py  executor.py  filters.py  models.py  parser.py  query_parser.py
tests/: test_cli_filter.py  test_date_resolver.py  test_executor.py  test_filters.py  test_get_recent_dailies.py  test_query_parser.py  test_task_parser.py
tests/fixtures/tasks/: basic_tasks.md  date_tasks.md  edge_cases.md  mixed_tasks.md  priority_tasks.md
